refactor: remove a region field and update ui

--- a/apps/app/public/static/locales/en_US/admin.json
+++ b/apps/app/public/static/locales/en_US/admin.json
@@ -205,15 +205,17 @@
       }
     },
     "cognito": {
-      "enable_cognito": "Enable Congnito",
+      "enable_cognito": "Enable Amazon Congnito",
       "name": "Amazon Cognito",
-      "client_id": "ClientID",
       "user_pool_id": "UserPoolId",
-      "region": "Region",
+      "user_pool_id_detail": "The ID of the Amazon Cognito user pool",
+      "client_id": "ClientID",
+      "client_id_detail": "The user pool app client ID",
+      "client_id_note": "The app can not have a client secret",
       "username_detail": "Specification of mappings for <code>username</code> when creating new users",
       "name_detail": "Specification of mappings for full name when creating new users",
       "mail_detail": "Specification of mappings for mail address when creating new users",
-      "updated_cognito": "Succeeded to update Cognito setting"
+      "updated_cognito": "Succeeded to update Amazon Cognito setting"
     },
     "form_item_name": {
       "entryPoint": "Entry point",
